--- a/app/templates/static/index.html
+++ b/app/templates/static/index.html
@@ -59,7 +59,7 @@
 						</a>
 						<!-- end: LOGO -->
 					</div>
-					{#<div class="navbar-collapse collapse">
+					<div class="navbar-collapse collapse">
 						<ul class="nav navbar-nav navbar-right">
 							<li class="active">
 								<a href="index.html">
@@ -292,7 +292,7 @@
 								<!-- end: SEARCH POPOVER -->
 							</li>
 						</ul>
-					</div>#}
+					</div>
 				</div>
 				<!-- end: TOP NAVIGATION CONTAINER -->
 			</div>
@@ -313,7 +313,7 @@
 							data-speed="400"
 							data-start="1500"
 							data-easing="easeOutExpo">
-								Free your creative spirit
+								Dispatching Made Simple
 							</div>
 							<div class="caption lft slide_subtitle slide_item_left"
 							data-x="0"
@@ -321,7 +321,7 @@
 							data-speed="400"
 							data-start="2000"
 							data-easing="easeOutExpo">
-								Super Clean Admin Theme
+								Technology Designd for Small and Mid Sized Carriers.
 							</div>
 							<div class="caption lft slide_desc slide_item_left"
 							data-x="0"
@@ -329,9 +329,6 @@
 							data-speed="400"
 							data-start="2500"
 							data-easing="easeOutExpo">
-								Lorem ipsum dolor sit amet, dolore eiusmod
-								<br>
-								quis tempor incididunt. Sed unde omnis iste.
 							</div>
 							<a class="caption lft btn btn-green slide_btn slide_item_left" href="http://themeforest.net/item/clipone-bootstrap-3-responsive-admin-template/5881143?ref=Cliptheme"
 							data-x="0"
@@ -339,7 +336,15 @@
 							data-speed="400"
 							data-start="3000"
 							data-easing="easeOutExpo">
-								Purchase Now!
+								Learn More!
+							</a>
+							<a class="caption lft btn btn-red slide_btn slide_item_left" href="http://themeforest.net/item/clipone-bootstrap-3-responsive-admin-template/5881143?ref=Cliptheme"
+							data-x="100"
+							data-y="320"
+							data-speed="400"
+							data-start="3000"
+							data-easing="easeOutExpo">
+								Signup for Beta Access
 							</a>
 							<div class="caption sfr"
 							data-x="720"
@@ -498,50 +503,49 @@
 							<div class="core-box">
 								<div class="heading">
 									<i class="clip-mobile circle-icon"></i>
-									<h2>Load management</h2>
+									<h2>Load Administration</h2>
 								</div>
 								<div class="content">
-									From winning the bid to on-time delivery, Tron simplifies and streamlines the dispataching and tracking of loads.
+									Efficiently run your business with our simple and easy to use load entry system that stores and provides access to all of your past and present load information.
 								</div>
-								{#<a class="view-more" href="#">
+								<a class="view-more" href="#">
 									View More <i class="fa fa-angle-right"></i>
-								</a>#}
+								</a>
 							</div>
 						</div>
 						<div class="col-sm-4">
 							<div class="core-box">
 								<div class="heading">
 									<i class="clip-clip circle-icon"></i>
-									<h2>Do more with less</h2>
+									<h2>Track &amp; Trace</h2>
 								</div>
 								<div class="content">
-									Handle more customers through Tron's dispatch support algorithm which determines the most appropriate drivers per load specifications. 
+									Eliminate the need for countless check calls. Our software automates driver communications and provides realtime tracking of your assets.
 								</div>
-								{#<a class="view-more" href="#">
+								<a class="view-more" href="#">
 									View More <i class="fa fa-angle-right"></i>
-								</a>#}
+								</a>
 							</div>
 						</div>
 						<div class="col-sm-4">
 							<div class="core-box">
 								<div class="heading">
 									<i class="clip-cogs circle-icon"></i>
-									<h2>Competitive advantage</h2>
+									<h2>Fleet Management</h2>
 								</div>
 								<div class="content">
-									Gain the proper insights off of previously collected data to optimize how future business decisions are made.
+									Our dispatch software brings together the management of your trucks, trailers and drivers in one place linking your assets to your business.
 								</div>
-								{#<a class="view-more" href="#">
+								<a class="view-more" href="#">
 									View More <i class="fa fa-angle-right"></i>
-								</a>#}
+								</a>
 							</div>
 						</div>
 					</div>
 				</div>
 				<!-- end: CORE BOXES CONTAINER -->
 			</section>
-			<section class="wrapper wrapper-grey padding50">
-				<!-- start: WORKS CONTAINER -->
+			<!--<section class="wrapper wrapper-grey padding50">
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12">
@@ -613,10 +617,8 @@
 						</div>
 					</div>
 				</div>
-				<!-- end: WORKS CONTAINER -->
-			</section>
-			<section class="wrapper padding50">
-				<!-- start: ABOUT US CONTAINER -->
+			</section>-->
+			<!--<section class="wrapper padding50">
 				<div class="container">
 					<div class="row">
 						<div class="col-sm-6">
@@ -667,8 +669,7 @@
 						</div>
 					</div>
 				</div>
-				<!-- end: ABOUT US CONTAINER -->
-			</section>
+			</section>-->
 		</div>
 		<!-- end: MAIN CONTAINER -->
 		<!-- start: FOOTER -->
