--- a/app/templates/carrier/truck/checkin.html
+++ b/app/templates/carrier/truck/checkin.html
@@ -26,7 +26,7 @@ function locate() {
 		    	$('#message').text(translated['message']);
 		        $('#message').show();
 		    }).fail(function(translated) {
-            $('#error').text(translated['message']);
+          alert(translated['message'])
 		        $('#error').show();
 		    });
         }, function() {
