--- a/app/templates/carrier/driver/create.html
+++ b/app/templates/carrier/driver/create.html
@@ -67,9 +67,9 @@
 					<hr>
 					<div class="form-group">
 						<div class="col-sm-2 col-sm-offset-3">
-							<button class="btn btn-light-grey back-step btn-block">
+							<a class="btn btn-light-grey back-step btn-block" href="javascript:history.back()">
 								<i class="fa fa-circle-arrow-left"></i> Cancel
-							</button>
+							</a>
 						</div>
 						<div class="col-sm-2 col-sm-offset-3">
 							<button type="submit" class="btn btn-blue next-step btn-block">
