--- a/app/templates/carrier/truck/edit.html
+++ b/app/templates/carrier/truck/edit.html
@@ -81,9 +81,9 @@
 					<hr>
 					<div class="form-group">
 						<div class="col-sm-2 col-sm-offset-3">
-							<button class="btn btn-light-grey back-step btn-block">
-								<i class="fa fa-circle-arrow-left"></i> Cancel
-							</button>
+							<a class="btn btn-light-grey back-step btn-block" href="javascript:history.back()">
+							<i class="fa fa-circle-arrow-left"></i> Cancel
+						</a>
 						</div>
 						<div class="col-sm-2 col-sm-offset-3">
 							<button type="submit" class="btn btn-blue next-step btn-block">
