--- a/app/templates/load/edit.html
+++ b/app/templates/load/edit.html
@@ -171,9 +171,9 @@
 			
 				<div class="form-group">
 					<div class="col-sm-2 col-sm-offset-3">
-						<button class="btn btn-light-grey back-step btn-block">
-							<i class="fa fa-circle-arrow-left"></i> Back
-						</button>
+						<a class="btn btn-light-grey back-step btn-block" href="javascript:history.back()">
+							<i class="fa fa-circle-arrow-left"></i> Cancel
+						</a>
 					</div>
 					<div class="col-sm-2 col-sm-offset-3">
 						<button type="submit" class="btn btn-success btn-block">
