--- a/app/templates/carrier/driver/edit.html
+++ b/app/templates/carrier/driver/edit.html
@@ -67,12 +67,12 @@
 					<hr>
 					<div class="form-group">
 						<div class="col-sm-2 col-sm-offset-3">
-							<a class="btn btn-light-grey back-step btn-block" href="javascript:history.back()">
+							<button class="btn btn-light-grey back-step btn-block" href="javascript:history.back()">
 								<i class="fa fa-circle-arrow-left"></i> Cancel
-							</a>
+							</button>
 						</div>
 						<div class="col-sm-2 col-sm-offset-3">
-							<button type="submit" class="btn btn-blue next-step btn-block">
+							<button type="submit" class="btn btn-blue next-step btn-block" id="submit">
 								Submit <i class="fa fa-arrow-circle-right"></i>
 							</button>
 						</div>
