--- a/app/templates/carrier/truck/edit.html
+++ b/app/templates/carrier/truck/edit.html
@@ -86,7 +86,7 @@
 						</a>
 						</div>
 						<div class="col-sm-2 col-sm-offset-3">
-							<button type="submit" class="btn btn-blue next-step btn-block">
+							<button type="submit" class="btn btn-blue next-step btn-block" id="submit">
 								Submit <i class="fa fa-arrow-circle-right"></i>
 							</button>
 						</div>
