--- a/app/templates/load/edit.html
+++ b/app/templates/load/edit.html
@@ -171,13 +171,13 @@
 			
 				<div class="form-group">
 					<div class="col-sm-2 col-sm-offset-3">
-						<a class="btn btn-light-grey back-step btn-block" href="javascript:history.back()">
+						<a class="btn btn-light-grey back-step btn-block" href="javascript:history.back()" id="cancel">
 							<i class="fa fa-circle-arrow-left"></i> Cancel
 						</a>
 					</div>
 					<div class="col-sm-2 col-sm-offset-3">
-						<button type="submit" class="btn btn-success btn-block">
-							Finish <i class="fa fa-arrow-circle-right"></i>
+						<button type="submit" class="btn btn-success btn-block" id="submit">
+							Submit <i class="fa fa-arrow-circle-right"></i>
 						</button>
 					</div>
 				</div>
