--- a/app/templates/partials/page_header.html
+++ b/app/templates/partials/page_header.html
@@ -18,22 +18,12 @@
 											{% endif %}
 
 											<a href="{{ url_for('loads.edit', load_id=load.id) }}" class="btn btn-primary">Edit</a>
-											
+											<a href="{{ url_for('.add_location', load_id=load.id) }}" class="new-modal btn btn-green">
+												Add Location <i class="fa fa-plus"></i>
+											</a>
 											
 											{% if load.assigned_driver is not none %}
-												<div class="dropdown">
-												  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-												    Actions
-												    <span class="caret"></span>
-												  </button>
-												  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-												    <li><a href="{{ url_for('.add_location', load_id=load.id) }}" class="new-modal btn btn-green">
-															Add Location <i class="fa fa-plus"></i>
-														</a></li>
-												    <li><a href="javascript:ping_driver({{ load.assigned_driver.truck.id }});" class="new-modal btn btn-green">Ping Driver</a></li>
-												  </ul>
-												</div>
-												
+												<a href="javascript:ping_driver({{ load.assigned_driver.truck.id }});" class="new-modal btn btn-green">Ping Driver</a>
 											{% endif %}
 										{% endif %}
 										{% if truck is defined %}
